<resources>
    <string name="app_name">Motion Emulator</string>
    <string name="title_status_ready">The App is Ready</string>
    <plurals name="text_status_ready">
        <item quantity="one">%d plug-in is activated</item>
        <item quantity="other">%d plug-ins are activated</item>
    </plurals>
    <string name="title_record">Record</string>
    <string name="text_record">Collect sensor data with which the motion is simulated</string>
    <string name="title_activity_record">Record</string>
    <string name="title_record_sensor">Choose the Sensors Involved</string>
    <string name="name_sensor_acc">Accelerometer</string>
    <string name="name_sensor_step_counter">Step counter</string>
    <string name="name_sensor_gyroscope">Gyroscope</string>
    <string name="name_sensor_step_detec">Step detector</string>
    <string name="name_sensor_light">Light sensor</string>
    <string name="action_continue">Continue</string>
    <string name="title_charts">Data Collected</string>
    <string name="action_stop">Stop</string>
    <string name="text_permission_not_granted">Necessary permits not granted</string>
    <string name="action_grant">Grant</string>
    <string name="action_move">Move</string>
    <string name="action_draw">Draw Trace</string>
    <string name="action_save">Save</string>
    <string name="title_draw_trace">Draw Trace</string>
    <string name="text_draw_trace">Mark out the lane you want to run on on the map</string>
    <string name="action_search">Search</string>
    <string name="name_location">%2$s, %1$s</string>
    <string name="name_map_common">Common Map</string>
    <string name="name_map_satellite">Satellite Map</string>
    <string name="name_map_night">Dark Mode Map</string>
    <string name="text_near">Near %s</string>
    <string name="action_undo">Undo</string>
    <string name="text_trace_name">Marked as \"%s\"</string>
    <string name="text_trace_saved">Successfully saved %d traces</string>
    <string name="title_motion">Motion</string>
    <string name="text_trace_selected">Trace \"%s\" selected</string>
    <string name="action_start_emulation">Start Emulation</string>
    <string name="title_repeat">Repeat Count</string>
    <string name="title_velocity">Velocity</string>
    <string name="text_field_must_not_empty">must not be empty</string>
    <string name="text_field_must_not_neg_or_zero">must not be zero or negative</string>
    <string name="suffix_velocity" translatable="false">%s m/s</string>
    <string name="title_channel_emulation">Emulation Activity</string>
    <string name="title_emulation_ongoing">Emulation Ongoing</string>
    <string name="text_emulation_ongoing">Click here to see more detail</string>
    <string name="text_channel_emulation">background indicator for active emulations</string>
    <string name="name_sensor_magnetic">Magnetic field sensor</string>
    <string name="name_sensor_acc_uncal">Uncalibrated accelerometer</string>
    <string name="name_sensor_gyroscope_uncal">Uncalibrated gyroscope</string>
    <string name="name_sensor_magnetic_uncal">Uncalibrated magnetic sensor</string>
    <string name="name_sensor_linear_acc">Linear accelerometer</string>
    <string name="title_emulate">Emulate</string>
    <string name="text_emulate">Direct your sensors and GPS</string>
    <string name="name_cell">Cell Station</string>
    <string name="title_telephony_recording">Recording cell information. %s seconds until first update</string>
    <string name="text_telephony_recording_neighboring">Capturing %d neighboring infos</string>
    <string name="text_telephony_recording_location">Cell location is present</string>
    <string name="name_cell_signal">Signal Strength</string>
    <string name="title_cells">Base Station</string>
    <string name="title_satellite_count">Satellites Count</string>
    <string name="title_trace">Trace</string>
    <string name="status_velocity">running at %s</string>
    <string name="status_total">%s in total</string>
    <string name="status_remaining">%s to go</string>
    <string name="action_determine">Determine</string>
    <string name="suffix_meter">m</string>
    <string name="suffix_second">s</string>
    <string name="title_emulation_stopped">Emulation Stopped</string>
    <string name="title_emulation_canceled">Emulation Canceled</string>
    <string name="title_emulation_completed">Emulation Completed</string>
    <string name="title_emulation_pending">Emulation Pending</string>
    <string name="title_emulation_failure">Emulation Failed</string>
    <string name="text_emulation_pending">waiting for an app to pick up</string>
    <string name="title_agent_offline">Agent Offline</string>
    <string name="title_controller_offline">Controller Offline</string>
    <string name="text_controller_offline">This is not supposed to have happened. Please restart the app.</string>
    <string name="action_restart">Restart</string>
    <string name="title_unknown">Unknown</string>
    <string name="action_show_system_apps">Show system apps</string>
    <string name="action_bypass_mode">Bypass mode</string>
    <string name="action_set_as_default">Set as default</string>
    <string name="text_saved_as_default">Saved current configuration as default</string>
    <string name="name_none">None</string>
    <string name="name_block">Block</string>
    <string name="title_manager">Data Manager</string>
    <string name="title_manage">Manage</string>
    <string name="text_manage">Manage the data that have been collected</string>
    <string name="action_navigate_up">Navigate up</string>
    <string name="title_trace_data">Trace Data</string>
    <string name="text_in_duration">%s in duration</string>
    <string name="action_delete">Delete</string>
    <string name="text_deleted">Deleted %s</string>
    <string name="text_pieces_of_record">%d pieces of record</string>
    <string name="text_in_length">%s in length</string>
    <string name="text_estimated">%s estimated</string>
    <string name="title_name">Name</string>
    <string name="title_id">Identity</string>
    <string name="caption_salt">RANDOM FACTORS</string>
    <string name="action_add">Add</string>
    <string name="name_translation">Translation</string>
    <string name="name_rotation">Rotation</string>
    <string name="name_scale">Scale</string>
    <string name="name_custom_matrix">Custom Matrix</string>
    <string name="caption_adding_salt">Adding salt</string>
    <string name="name_anchor">Anchor</string>
    <string name="text_point" translatable="false">(%s, %s)</string>
    <string name="name_latitude">latitude</string>
    <string name="name_longitude">longitude</string>
    <string name="caption_insert_formula">Insert formula</string>
    <string name="name_x" translatable="false">x</string>
    <string name="name_y" translatable="false">y</string>
    <string name="name_ratio_x">ratio x</string>
    <string name="name_ratio_y">ratio y</string>
    <string name="name_radian">radian</string>
    <string name="suffix_deg" translatable="false">%s°</string>
    <string name="action_use_input">Use input</string>
    <string name="suffix_increasing" translatable="false">%s↑</string>
    <string name="suffix_decreasing" translatable="false">%s↓</string>
    <string name="name_sin">sine</string>
    <string name="name_cos">cosine</string>
    <string name="name_tan">tangent</string>
    <string name="name_arcsin">arcsine</string>
    <string name="name_arccos">arccosine</string>
    <string name="name_atan">arctangent</string>
    <string name="name_sinh">hyperbolic sine</string>
    <string name="name_cosh">hyperbolic cosine</string>
    <string name="name_tanh">hyperbolic tangent</string>
    <string name="name_abs">absoluate</string>
    <string name="name_round">half up or down</string>
    <string name="name_floor">round down</string>
    <string name="name_ceil">round up</string>
    <string name="name_log">natural logarithm</string>
    <string name="name_sqrt">square root</string>
    <string name="name_cbrt">cube root</string>
    <string name="name_pi">pi</string>
    <string name="name_e">Euler\'s number</string>
    <string name="name_rand">random</string>
    <string name="name_random_factor">Random factor</string>
    <string name="title_random_factor">Random Factor</string>
    <string name="title_custom_matrix">Custom Matrix</string>
    <string name="text_salt_common">Adding salt means modifying the data to make it different for each run</string>
    <string name="text_salt_trace">When adding salt to a trace, consider the order of magnitude to be E-4 or smaller
    </string>
    <string name="title_overview">Overview</string>
    <string name="title_exported">Export at %s</string>
    <string name="title_export">Export</string>
    <string name="title_import">Import</string>
    <string name="title_share">Share</string>
    <string name="text_selected_items">%d item(s) selected</string>
    <string name="title_select_to_export">Select to Export</string>
    <string name="text_empty_list">empty list</string>
    <string name="title_send_to">Send to …</string>
    <string name="text_imported">%d records were imported</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_settings_map">Maps</string>
    <string name="title_settings_naming">Naming</string>
    <string name="title_settings_map_provider">Map provider</string>
    <string name="name_google_maps">Google Maps</string>
    <string name="name_amap">AMap</string>
    <string name="title_settings_poi_provider">POI provider</string>
    <string name="caption_settings_time_format">TIME FORMAT</string>
    <string name="title_settings_use_custom_time_format">Use custom time format</string>
    <string name="settings_title_time_format">Time format</string>
    <string name="name_coord_sys">Coordinate System</string>
    <string name="title_activity_map_pending">Pending Map</string>
    <string name="title_is_gcs_accessible">Does this device have access to Google services?</string>
    <string name="title_gcs_accessible">Yes it does</string>
    <string name="title_gcs_inaccessible">No it doesn\'t</string>
    <string name="text_gcs_accessible">Will use Google Maps as the map provider</string>
    <string name="text_gcs_inaccessible">Use AMap as the provider, whose scope is limited to China mainland</string>
    <string name="text_pending_map_provider">You can change these settings later</string>
    <string name="action_add_trace">Add Trace</string>
    <string name="action_sample">GPS Sample</string>
    <string name="action_opt">Opt</string>
    <string name="action_done">Done</string>
    <string name="action_clear">Clear</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_pause">Pause</string>
    <string name="action_unpause">Unpause</string>
    <string name="text_gps_pending">Waiting for GPS location</string>
    <string name="title_no_gps_provider">No GPS Support</string>
    <string name="text_no_gps_provider">GPS location provider is not supported on your phone</string>
    <string name="title_unsaved_trace">Unsaved Trace</string>
    <string name="text_unsaved_trace">There are trace data that\'s not saved yet. Do you know what you are doing?
    </string>
    <string name="text_app_received">%s has picked up</string>
    <string name="text_emulation_app_pending">waiting for the app to pick up</string>
    <string name="text_swipe_to_see_more">Swipe between the cards to see the details</string>
    <string name="title_named_emulation_ongoing">Emulation #%s Ongoing</string>
    <string name="title_settings_emulation">Emulation</string>
    <string name="caption_server">SERVER</string>
    <string name="title_server_port">Server port</string>
    <string name="title_use_tls">Use TLS</string>
    <string name="text_input_invalid">input invalid</string>
    <string name="title_activity_updater">App Updater</string>
</resources>