<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="Search"
            app:showAsAction="always"
            app:actionViewClass="android.widget.SearchView"/>
    <group android:menuCategory="alternative">
        <item
                android:id="@+id/app_bar_type_common"
                android:title="@string/name_map_common"/>
        <item
                android:id="@+id/app_bar_type_satellite"
                android:title="@string/name_map_satellite"/>
        <item
                android:id="@+id/app_bar_type_night"
                android:title="@string/name_map_night"/>
    </group>
</menu>