<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
            app:key="messages_header"
            app:title="@string/title_settings_map"
            app:icon="@drawable/ic_baseline_map_24"
            app:fragment="com.zhufucdev.motion_emulator.ui.SettingsActivity$MapsFragment"/>

    <Preference
            app:key="sync_header"
            app:title="@string/title_settings_naming"
            app:icon="@drawable/ic_baseline_assignment_24"
            app:fragment="com.zhufucdev.motion_emulator.ui.SettingsActivity$NamingFragment"/>

    <Preference
            app:key="emulation"
            app:title="@string/title_settings_emulation"
            app:icon="@drawable/ic_baseline_auto_fix_high_24"
            app:fragment="com.zhufucdev.motion_emulator.ui.SettingsActivity$EmulationFragment"/>
</PreferenceScreen>