<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.collect.RecordSensorFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_padding">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/page_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin"
                    android:tint="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_smartphone_24" />

            <TextView
                    android:id="@+id/page_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_record_sensor"
                    app:layout_constraintStart_toEndOf="@id/page_icon"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                app:cardCornerRadius="@dimen/card_radius">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding_inside">

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_acc" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_step_counter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_step_counter" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_step_detec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_step_detec" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_gyroscope"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_gyroscope" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_magnetic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_magnetic" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_linear_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_linear_acc" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_sensor_light" />

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_telephony"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/name_cell" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/common_padding"
                        android:text="@string/action_continue" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>