<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_emulation"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/card_padding_inside"
                android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_emulation_status"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/title_emulation_pending"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_emulation_status"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/text_emulation_pending"/>

            <include
                    android:id="@+id/stack_monitors"
                    layout="@layout/stack_monitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding"/>

            <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_determine"
                    android:layout_gravity="end"
                    android:text="@string/action_determine"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</androidx.cardview.widget.CardView>