<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.emulate.EmulationControlFragment"
        app:cardCornerRadius="@dimen/card_radius">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:id="@+id/progress_emulation"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/card_padding_inside">
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_header"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/title_emulation_status"
                          style="@style/TextAppearance.AppCompat.Title"
                          android:text="@string/title_emulation_pending"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/text_emulation_status"
                          style="@style/TextAppearance.AppCompat.Body1"
                          android:text="@string/text_emulation_pending"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:animateLayoutChanges="true">
                <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_determine"
                        android:text="@string/action_determine"
                        android:layout_gravity="bottom|end"/>
            </FrameLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</androidx.cardview.widget.CardView>